# tg_bot_ready

./: bot.db  config.py  main.py  pyproject.toml
bot/: commands.py
bot/filters/: admin.py
bot/handlers/admin/: __init__.py  accounts.py  broadcast.py  categories.py  dashboard.py  groups.py  inline.py  proxies.py  users.py
bot/handlers/user/: __init__.py  categories.py  profile.py  start.py  subscription.py
bot/keyboards/: __init__.py  admin_kb.py  user_kb.py
bot/middlewares/: __init__.py  activity.py  auto_answer.py  database.py
bot/states/: __init__.py  admin_states.py  user_states.py
database/: __init__.py  db.py  models.py
parser/: __init__.py  client.py  manager.py
services/: cryptobot.py  cryptobot_polling.py  cryptobot_webhook.py
tests/: conftest.py  test_captcha.py  test_cryptobot_webhook.py  test_db_operations.py  test_keyboards.py  test_models.py  test_parser_logic.py  test_subscription_logic.py
