[project]
name = "dezayner-tg-bot"
version = "0.1.0"
description = "Telegram parser bot for dezaynersite"
requires-python = ">=3.9"
dependencies = [
    "aiogram>=3.15,<4.0",
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.20",
    "python-dotenv>=1.0",
    "telethon>=1.36",
    "aiohttp>=3.9",
    "apscheduler>=3.10",
    "cryptography>=42.0",
    "thefuzz>=0.22",
    "python-levenshtein>=0.25",
    "aiohttp-socks>=0.11.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
